--- a/Python first steps, day 5 -- 2022-12Dec-19.ipynb
+++ b/Python first steps, day 5 -- 2022-12Dec-19.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "732757f2",
+   "id": "4f629424",
    "metadata": {},
    "source": [
     "# Agenda: Day 5 (Modules and packages)\n",
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "5525b5ed",
+   "id": "78c737af",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "9bccfd32",
+   "id": "d989c25c",
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35615da2",
+   "id": "ba392bf0",
    "metadata": {},
    "source": [
     "# Modules\n",
@@ -116,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "67eda4af",
+   "id": "242ccf32",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "bbf9b7e6",
+   "id": "d7bebcdd",
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "a9739224",
+   "id": "130dc935",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e2dd740f",
+   "id": "51c87cf4",
    "metadata": {},
    "source": [
     "# Is `random` a module, or a variable?\n",
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b7921f71",
+   "id": "a7398d1c",
    "metadata": {},
    "source": [
     "# Exercise: Random numbers\n",
@@ -205,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "ce0bc00c",
+   "id": "8d1cc020",
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "caf8f404",
+   "id": "147023f9",
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea5861b3",
+   "id": "ab8fa9fb",
    "metadata": {},
    "source": [
     "When we use `import`, we're basically doing two things:\n",
@@ -283,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "e16fc352",
+   "id": "fa2554a9",
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "b10f8a24",
+   "id": "e900e85c",
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86896d37",
+   "id": "8a3ab545",
    "metadata": {},
    "source": [
     "What if I'm going to use `random.randint` many times in my program. Can I just write `randint`, without `random.` before it?\n",
@@ -347,7 +347,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "f370c37f",
+   "id": "05908d29",
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +369,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "459c6abe",
+   "id": "71b4d265",
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "10e52e0f",
+   "id": "6c718592",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +402,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "8d37fbf1",
+   "id": "31c1e81f",
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a0cd016",
+   "id": "d4cd9ba6",
    "metadata": {},
    "source": [
     "# A few things about `from .. import ..`\n",
@@ -439,7 +439,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "31ea31d1",
+   "id": "639e891e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "ec44284b",
+   "id": "f9831dc9",
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +483,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "33b95f91",
+   "id": "beaee9f5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "316068be",
+   "id": "80b41a38",
    "metadata": {},
    "source": [
     "# Four ways to `import`:\n",
@@ -516,7 +516,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e69db2c8",
+   "id": "1818c15f",
    "metadata": {},
    "source": [
     "# Exercise: Filenames that match\n",
@@ -529,7 +529,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "8aedaebc",
+   "id": "19ae2ae3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -539,7 +539,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "b18aac18",
+   "id": "6e65ac00",
    "metadata": {},
    "outputs": [
     {
@@ -567,7 +567,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "b6a3f050",
+   "id": "f4bf0ee3",
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +592,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "da0ba0ca",
+   "id": "0d122239",
    "metadata": {},
    "outputs": [
     {
@@ -618,7 +618,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "787b9dbb",
+   "id": "6115331a",
    "metadata": {},
    "outputs": [
     {
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f833e80",
+   "id": "5ac289c2",
    "metadata": {},
    "source": [
     "# Next up\n",
@@ -666,7 +666,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "e96edd48",
+   "id": "1a2c3a33",
    "metadata": {},
    "outputs": [
     {
@@ -694,7 +694,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "8e63a5f8",
+   "id": "7741bba1",
    "metadata": {},
    "outputs": [
     {
@@ -729,7 +729,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "53d09890",
+   "id": "e53657b9",
    "metadata": {},
    "outputs": [
     {
@@ -752,7 +752,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a120b131",
+   "id": "99e0a9f6",
    "metadata": {},
    "source": [
     "# What's in a module?\n",
@@ -766,7 +766,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "f0a691a2",
+   "id": "0f73cbb2",
    "metadata": {},
    "outputs": [
     {
@@ -853,7 +853,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b05d72e5",
+   "id": "8a8e8603",
    "metadata": {},
    "source": [
     "# Unusual attribute names\n",
@@ -870,7 +870,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "78b8538d",
+   "id": "72ba41cb",
    "metadata": {},
    "outputs": [
     {
@@ -892,7 +892,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "7f5e23c6",
+   "id": "4a66123d",
    "metadata": {},
    "outputs": [
     {
@@ -1543,7 +1543,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "de774d50",
+   "id": "9d8a916c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1560,7 +1560,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "158fe4df",
+   "id": "b31ec3e6",
    "metadata": {},
    "outputs": [
     {
@@ -1582,7 +1582,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "434eb121",
+   "id": "43baab01",
    "metadata": {},
    "outputs": [
     {
@@ -1611,7 +1611,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "99c44eb6",
+   "id": "ef5b8176",
    "metadata": {},
    "source": [
     "# Some of the dunder attributes on every module\n",
@@ -1624,7 +1624,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "09257616",
+   "id": "51d5dabb",
    "metadata": {},
    "outputs": [
     {
@@ -1645,7 +1645,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "d629756b",
+   "id": "ff6a5ee0",
    "metadata": {},
    "outputs": [
     {
@@ -1666,7 +1666,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "16b4a77a",
+   "id": "5f24d304",
    "metadata": {},
    "outputs": [
     {
@@ -1687,7 +1687,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "ff8903a9",
+   "id": "664b20ce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1697,7 +1697,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "66a7dd0a",
+   "id": "3d70ecc7",
    "metadata": {},
    "outputs": [
     {
@@ -1725,7 +1725,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "62c8567d",
+   "id": "055e6945",
    "metadata": {},
    "outputs": [
     {
@@ -1749,7 +1749,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "49125487",
+   "id": "b6c55c58",
    "metadata": {},
    "outputs": [
     {
@@ -1780,7 +1780,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "249c5a65",
+   "id": "14868420",
    "metadata": {},
    "outputs": [
     {
@@ -1801,7 +1801,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "095640b6",
+   "id": "b96e9d3d",
    "metadata": {},
    "outputs": [
     {
@@ -1822,7 +1822,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "b32280cb",
+   "id": "4abbd556",
    "metadata": {},
    "outputs": [
     {
@@ -1842,7 +1842,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04ad3153",
+   "id": "b198b959",
    "metadata": {},
    "source": [
     "# Exercise: Menu\n",
@@ -1864,7 +1864,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "f64a8ed8",
+   "id": "beeb382d",
    "metadata": {},
    "outputs": [
     {
@@ -1889,7 +1889,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f5368a91",
+   "id": "bb3e99e4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1912,7 +1912,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "ac590a0d",
+   "id": "86fcadb5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1922,7 +1922,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "b60af2a3",
+   "id": "fb0c148c",
    "metadata": {},
    "outputs": [
     {
@@ -1943,7 +1943,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "528ce704",
+   "id": "06966905",
    "metadata": {},
    "outputs": [
     {
@@ -1964,7 +1964,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "4d225d44",
+   "id": "bc904546",
    "metadata": {},
    "outputs": [
     {
@@ -1985,7 +1985,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "25f4a21e",
+   "id": "6881301b",
    "metadata": {},
    "outputs": [
     {
@@ -2013,7 +2013,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b55166d",
+   "id": "a1ad673c",
    "metadata": {},
    "source": [
     "# Attributes vs. globals\n",
@@ -2028,7 +2028,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "cc66948e",
+   "id": "2f3f8088",
    "metadata": {},
    "outputs": [
     {
@@ -2056,7 +2056,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d74e04c",
+   "id": "7c2af8bb",
    "metadata": {},
    "source": [
     "# `__name__` can have two values\n",
@@ -2071,7 +2071,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5a46cfe",
+   "id": "2082dbe3",
    "metadata": {},
    "source": [
     "# `__name__` and `'__main__'`\n",
@@ -2091,7 +2091,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "619915bb",
+   "id": "f4f60539",
    "metadata": {},
    "outputs": [
     {
@@ -2112,7 +2112,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "7f243931",
+   "id": "775fce5a",
    "metadata": {},
    "outputs": [
     {
@@ -2133,7 +2133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67e76d81",
+   "id": "efbe83de",
    "metadata": {},
    "source": [
     "# Next up\n",
@@ -2147,7 +2147,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "bd743d15",
+   "id": "5bbcd513",
    "metadata": {
     "collapsed": true
    },
@@ -2328,7 +2328,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f51e839",
+   "id": "3a33ba50",
    "metadata": {},
    "source": [
     "# Exercise: File size\n",
@@ -2342,7 +2342,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "397422b9",
+   "id": "236c1218",
    "metadata": {},
    "outputs": [
     {
@@ -2365,7 +2365,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "3132d3f7",
+   "id": "9d855d2e",
    "metadata": {},
    "outputs": [
     {
@@ -2386,7 +2386,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "e3b65303",
+   "id": "f9fe157e",
    "metadata": {},
    "outputs": [
     {
@@ -2426,7 +2426,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "f90cb72f",
+   "id": "3d41fdee",
    "metadata": {},
    "outputs": [
     {
@@ -2460,7 +2460,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "08ccfd2c",
+   "id": "2a7e5f51",
    "metadata": {},
    "source": [
     "# Beyond the standard library\n",
@@ -2478,7 +2478,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74a2444f",
+   "id": "c18faca0",
    "metadata": {},
    "source": [
     "# Exercise: Colorize text\n",
@@ -2492,7 +2492,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "995f1e74",
+   "id": "24620cb0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2504,7 +2504,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "d4e0eee7",
+   "id": "cd61fafc",
    "metadata": {},
    "outputs": [
     {
@@ -2537,7 +2537,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e2aa605f",
+   "id": "1928f796",
    "metadata": {},
    "source": [
     "# Next up\n",
@@ -2548,7 +2548,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0937e2c8",
+   "id": "82274d94",
    "metadata": {},
    "source": [
     "# Next steps in improving your Python skills\n",
@@ -2561,6 +2561,8 @@
     "    - Taking a more serious/sophisticated course\n",
     "2. Keep up with the latest in the Python world\n",
     "    - Social media (LinkedIn and Twitter and Facebook) groups and/or hashtags\n",
+    "    - PySlackers\n",
+    "    - Python Dis\n",
     "    - Newslettters \n",
     "    - Conferences\n",
     "3. Push yourself to learn more\n",
@@ -2569,17 +2571,33 @@
   },
   {
    "cell_type": "markdown",
-   "id": "777b7f37",
+   "id": "08ebceb3",
    "metadata": {},
    "source": [
     "# \"No module\" potential fixes\n",
     "\n",
-    "1. You might have installed it using a different version of Python than you're running programs with. A solution to this is to say\n",
+    "1. You might have installed it using a different version of Python than you're running programs with. A solution to this is to use the same Python that you use to define things:\n",
     "\n",
     "    python3 -m pip install rich\n",
     "    \n",
-    "    "
+    "2. If you're using PyCharm, then it's likely using virtual environments. This means that the main `site-packages` directory isn't consulted when importing modules. This keeps every project insulated from version changes in other projects.  To deal with this, over over the name of the module, and PyCharm will offer to install it.  "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ca044adc",
+   "metadata": {},
+   "source": [
+    "Awesome Python site: awesome-python.com"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cd0b6e1a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
